[gd_scene load_steps=14 format=2]

[ext_resource path="res://ObstacleCourse/assets/godot.png" type="Texture" id=1]
[ext_resource path="res://ObstacleCourse/assets/shadow_circle.png" type="Texture" id=2]
[ext_resource path="res://ObstacleCourse_Part2/Godot_v2b.gd" type="Script" id=3]
[ext_resource path="res://ObstacleCourse/assets/smoke.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[sub_resource type="Animation" id=2]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hover"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "ghost"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ) ]
}

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0, 0.083682, 0.171548, 0.544118, 0.872549 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0, 0.780392, 0.831373, 0.882353, 1, 0.572549, 0.560784, 0.721569, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 14 )

[sub_resource type="Curve" id=15]
_data = [ Vector2( 0, 0.513245 ), 0.0, 0.0, 0, 0, Vector2( 0.237734, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.241722 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=16]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 150.0
damping_random = 0.5
scale = 0.5
scale_random = 0.5
scale_curve = SubResource( 13 )
color_ramp = SubResource( 11 )

[node name="Godot" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.356863 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -61 )
hframes = 3
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -30 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -30 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "hover"
anims/RESET = SubResource( 2 )
anims/hover = SubResource( 3 )

[node name="AnimationPlayerGhost" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/ghost = SubResource( 4 )

[node name="TimerGhost" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SmokeParticles" type="Particles2D" parent="."]
show_behind_parent = true
emitting = false
amount = 16
lifetime = 0.8
local_coords = false
process_material = SubResource( 16 )
texture = ExtResource( 5 )
